# AlphaSnobAI

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GUI_README.md  Makefile  QUICKSTART.md  README.md  alembic.ini  cli.py  cli.py.backup  docker-compose.dev.yml  docker-compose.yml  gui_launcher.py  main.py  olds.txt  pyproject.toml  requirements-gui.txt  requirements.txt  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bot/: client.py  daemon.py  handlers.py  interactive.py  runner.py
config/: config.yaml.example  secrets.yaml.example  settings.py
core/: __init__.py  memory.py  message_handler.py  style_engine.py  telegram_client.py
data/owner_samples/: README.md  messages.txt
docs/: ARCHITECTURE.md
gui/: __init__.py  app.py  main_window.py
gui/backend/: __init__.py  bot_process.py
gui/themes/: __init__.py  glass_dark.qss  glass_light.qss  macos_dark.qss  macos_light.qss
gui/widgets/: __init__.py  bot_control.py  database_viewer.py  log_viewer.py  owner_learning.py  settings_editor.py  statistics.py
prompts/: alphasnob_troll.yaml  normal_user.yaml  owner_style.yaml
services/: decision_engine.py  memory.py  owner_collector.py  owner_learning.py  persona_manager.py  style.py  typing_simulator.py  user_profiler.py
src/alphasnob/: __init__.py
src/alphasnob/application/: __init__.py
src/alphasnob/application/commands/: __init__.py  base.py  process_incoming_message_command.py  send_message_command.py
src/alphasnob/application/dto/: __init__.py  message_dto.py  user_dto.py
src/alphasnob/application/queries/: __init__.py  base.py  get_message_history_query.py  get_user_profile_query.py
src/alphasnob/application/services/: __init__.py  message_handling_service.py
src/alphasnob/domain/: __init__.py
src/alphasnob/domain/ai/: __init__.py
src/alphasnob/domain/ai/entities/: __init__.py  persona.py
src/alphasnob/domain/ai/repositories/: __init__.py  persona_repository.py
src/alphasnob/domain/ai/value_objects/: __init__.py  llm_response.py  prompt.py  temperature.py
src/alphasnob/domain/decisions/: __init__.py
src/alphasnob/domain/decisions/entities/: __init__.py  decision.py
src/alphasnob/domain/decisions/services/: __init__.py  decision_engine.py
src/alphasnob/domain/decisions/value_objects/: __init__.py  decision_factors.py  probability.py
src/alphasnob/domain/learning/: __init__.py
src/alphasnob/domain/learning/entities/: __init__.py  style_analysis.py  style_sample.py
src/alphasnob/domain/learning/repositories/: __init__.py  style_repository.py
src/alphasnob/domain/learning/value_objects/: __init__.py  formality_score.py
src/alphasnob/domain/messaging/: __init__.py
src/alphasnob/domain/messaging/entities/: __init__.py  chat.py  message.py
src/alphasnob/domain/messaging/events/: __init__.py  message_received.py  message_sent.py
src/alphasnob/domain/messaging/repositories/: __init__.py  message_repository.py
src/alphasnob/domain/messaging/value_objects/: __init__.py  chat_id.py  message_content.py
src/alphasnob/domain/shared/: __init__.py  base_entity.py  base_value_object.py  domain_event.py  errors.py
src/alphasnob/domain/users/: __init__.py
src/alphasnob/domain/users/entities/: __init__.py  user.py  user_profile.py
src/alphasnob/domain/users/repositories/: __init__.py  user_repository.py
src/alphasnob/domain/users/value_objects/: __init__.py  relationship.py  trust_score.py  user_id.py
src/alphasnob/infrastructure/: __init__.py
src/alphasnob/infrastructure/config/: __init__.py  settings.py
src/alphasnob/infrastructure/di/: __init__.py  container.py
src/alphasnob/infrastructure/persistence/: __init__.py  database.py
src/alphasnob/infrastructure/persistence/models/: __init__.py  message_model.py  user_model.py
src/alphasnob/infrastructure/persistence/repositories/: __init__.py  sqlalchemy_user_repository.py
src/alphasnob/infrastructure/telegram/: __init__.py  client.py
src/alphasnob/presentation/cli/: __init__.py  app.py
src/alphasnob/presentation/cli/commands/: start.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_user_repository.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py  test_commands.py
tests/unit/domain/: __init__.py  test_decision_engine.py  test_user_profile.py  test_user_value_objects.py
utils/: config_display.py  corpus_loader.py  db_manager.py  db_migration.py  interactive_logger.py  language_detector.py  log_viewer.py  monitor.py  rich_logger.py  setup_wizard.py  stats_collector.py  ui.py
