[project]
name = "alphasnob"
version = "3.0.0"
description = "Elite AI-Powered Telegram UserBot with DDD Architecture"
authors = [
    {name = "AlphaSnob Team", email = "dev@alphasnob.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["telegram", "bot", "ai", "claude", "ddd", "userbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # Telegram
    "telethon>=1.35.0",

    # AI/LLM
    "anthropic>=0.18.0",
    "openai>=1.0.0",

    # Data & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",

    # Configuration
    "pyyaml>=6.0.0",

    # DI & Patterns
    "dependency-injector>=4.41.0",
    "returns>=0.22.0",

    # Logging
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",

    # Utils
    "psutil>=5.9.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.8.0",
    "PySide6-Addons>=6.8.0",
    "qtawesome>=1.3.0",
    "qdarkstyle>=3.2.0",
    "matplotlib>=3.8.0",
    "pyqtgraph>=0.13.0",
]

dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.92.0",
    "faker>=20.0.0",

    # Linting & Formatting
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "black>=23.12.0",

    # Type stubs
    "types-pyyaml>=6.0.12",
    "types-psutil>=5.9.5",

    # Pre-commit
    "pre-commit>=3.6.0",

    # Database tools
    "sqlalchemy[mypy]>=2.0.25",
]

all = [
    "alphasnob[gui,dev]",
]

[project.scripts]
alphasnob = "alphasnob.presentation.cli.app:main"
alphasnob-gui = "alphasnob.presentation.gui.app:main"

[project.urls]
Homepage = "https://github.com/alphasnob/alphasnob-ai"
Documentation = "https://alphasnob-ai.readthedocs.io"
Repository = "https://github.com/alphasnob/alphasnob-ai"
"Bug Tracker" = "https://github.com/alphasnob/alphasnob-ai/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alphasnob"]

[tool.hatch.version]
path = "src/alphasnob/__init__.py"

# ============================================================================
# RUFF - Linting & Formatting
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "NPY",    # NumPy-specific rules
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # use of assert (ok in tests)
    "PLR0913", # too many arguments
    "ARG002", # unused method argument
    "TRY003", # long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "ARG001"]
"src/alphasnob/infrastructure/di/container.py" = ["ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["alphasnob"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# ============================================================================
# MYPY - Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "telethon.*",
    "anthropic.*",
    "openai.*",
    "questionary.*",
    "qdarkstyle.*",
    "qtawesome.*",
    "pyqtgraph.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# ============================================================================
# PYTEST - Testing
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=alphasnob",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (external dependencies)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

# ============================================================================
# BLACK - Code Formatting
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''
